iFeature Changelog

****************************

Version 2.0.7 (9-23-11)
-Added height:auto element to img.size-full class.
-Removed unnecessary trailing slash in JS script file paths in functions.php

Version 2.0.6 (9-15-11)
-Register sidebars now placed in a function that hooks into widgets_init. 
-Added ID and description to the footer widgetized area. 
-Fixed post thumbnail alignment issue caused by clearing float fix from 2.0.4.
-Added post pagination links on main blog index. 
-Fixed img.size-full width. 

Version 2.0.5 (09-08-11)
-Stripping HTML from Google + and Google Maps social icon URL option.
-Stripping HTML from logo and favicon URL option.
-Updated font choices.
-Updated readme.txt.

Version 2.0.4 (8-31-11)
-Fixed HTML code showing up in header contact area.
-Added trailing slashes to default social icon URLs.
-Added height and width element to social icons.
-Fixed floats not clearing on images. 
-Fixed paddings on site title/description. 
-Lightened link hover color in footer. 
-Adjusted padding, margins and font size of footer widget titles. 
-Adjusted margins/padding on post title, meta, and entry classes. 
-Added link hover on secondary footer menu. 
-Removed unnecessary text domain property from link to theme settings in admin menu. 

Version 2.0.3 (8-23-11)
-Fixed issue related to Google Analytics code appearing in the footer. 
-Added link to iFeature theme options settings in the Admin bar. 
-Added Arial and serif secondary fonts to body font family. 
-Updated NivoSlider script to 2.6.
-Now enqueueing WP jQuery library again in light of NivoSlider update. 

Version 2.0.2 (8-16-11)
-Replaced Cantarell with web-safe Lucida Grande as default font for better browser readability.
-Replaced stripslashes() with esc_textarea() (Thanks to Chip for pointing that one out). 
-Removed function_exists() conditional wrapper for add_theme_support() in functions.php.
-Removed instances of localization calls. Localization support will be added in 2.1.