@@ -16,6 +16,5 @@
 
 ?>
 
-
 <div class="meta">
 <?php if ($author != '1'):?>Published by <?php the_author_posts_link(); ?> <?php endif;?> <?php if ($category != '1'):?>in <?php the_category(', ') ?> <?php endif;?><?php if ($date != '1'):?> on <a href="<?php the_permalink() ?>"><?php the_time('F jS, Y') ?></a><?php endif;?></div>
