@@ -81,6 +81,7 @@ code, tt { }
 	padding-top: 1px;
 	margin-top: 10px;
 	width: 600px;
+	margin-left: 2px;
 
 }
 
@@ -122,7 +123,7 @@ code, tt { }
 }
 
 .sitename {
-	font-size: 26px;
+	font-size: 30px;
 	font-weight: bolder;
 	margin-top: 5px;
 }
