@@ -4,7 +4,10 @@ iFeature Changelog
 
 Version 2.0.7 (9-23-11)
 -Added height:auto element to img.size-full class.
--Removed unnecessary trailing slash in JS script file paths in functions.php
+-Removed unnecessary trailing slash in JS script file paths in functions.php.
+-Renamed sidebar_register function to ifeature_widgets_init.
+-Removed various empty lines from template files. 
+-Increased font size of site title. 
 
 Version 2.0.6 (9-15-11)
 -Register sidebars now placed in a function that hooks into widgets_init. 
